# advent-of-code-python

./: .gitignore  README.md  create_stub.py  pyproject.toml  requirements.txt
.junie/: guidelines.md
2015/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py
input/2015/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  08.yaml  09.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  17.yaml  18.yaml  19.yaml  23.yaml  24.yaml
input/2024/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  06.yaml  07.yaml  08.yaml  09.yaml  10.yaml  11.yaml  12.yaml  13.yaml  14.yaml  15.yaml  16.yaml  17.yaml  18.yaml  19.yaml  20.yaml  21.yaml  22.yaml  23.yaml  24.yaml  25.yaml
input/2025/: 01.yaml  02.yaml  03.yaml  04.yaml  05.yaml  06.yaml  07.yaml
modules/: __init__.py  advent_of_code.py  enums.py  grid.py  helpers.py  list.py  timer.py
