[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black~=25.1.0",
    "colorama~=0.4.6",
    "numpy~=2.3.2",
    "pydantic~=2.11.7",
    "python-dotenv~=1.1.1",
    "pyyaml~=6.0.2",
    "requests~=2.32.3",
    "toolz~=1.0.0",
]
